fix: white space at the bottom for google ads

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,6 +112,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto !important;
   max-height: 100dvh;
+  box-shadow: inset 0px -66px #ccc;
 }
 
 a {
